--- a/css/styles.css
+++ b/css/styles.css
@@ -113,3 +113,29 @@ espacios y que despues del texto en cuestion venga un guion medio*/
     font-family: 'Courier New', Courier, monospace;
     border-style: double;
 }
+
+.lista-pseudoclases li:first-child{
+    color: green
+}
+
+.lista-pseudoclases li:last-child{
+    color:rgb(180, 188, 34)
+}
+
+.lista-pseudoclases li:nth-child(3){
+    color: navy;
+}
+
+.lista-pseudoclases li:nth-child(4n){
+    color: navy;
+    font-size: 24px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.lista-pseudoclases li:nth-child(even){
+    background-color: aquamarine;
+}
+
+.lista-pseudoclases li:nth-child(odd ){
+    background-color: rgb(25, 157, 27);
+}
