terminacion conceptos de cajas

--- a/css/styles.css
+++ b/css/styles.css
@@ -356,3 +356,34 @@ Float y Clear
 .float-left{
     float: left;
 }
+
+/*Colapson de margenes vertciales*/
+
+.margin-colapse{
+    background-color: darkcyan;
+}
+
+.margin-colapse section{
+    border: 2px solid black;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
+.margin-colapse span{
+    display: inline-block;
+    margin-right: 16px;
+    margin-left: 16px;
+    border: 2px solid black;
+}
+
+/*Centrado de cajas*/
+
+.sitio-web{
+    border: thin solid black;
+    background-color: thistle;
+    width: 800px;
+    height: 1000px;
+    padding: 16px;
+    margin-left: auto;
+    margin-right: auto;
+}
