Posicionamiento y profundidad en CSS

--- a/ejercicios/positions-examples.css
+++ b/ejercicios/positions-examples.css
@@ -18,3 +18,13 @@ body{
     position: sticky;
     top: 0;
 }
+
+.slide{
+    width: 100%;
+    height: 100vh;
+    background-color: paleturquoise;
+}
+
+.slide-child(odd){
+    background-color: palevioletred;
+}
